--- a/debs/unicode-data/debian/changelog
+++ b/debs/unicode-data/debian/changelog
@@ -1,4 +1,4 @@
-unicode-data (10.0.0-3) unstable; urgency=medium
+unicode-data (10.0.0-3) buster; urgency=medium
 
   * Store emoji/ files in debian/emoji for 10.0* release. Move to tarball
     on next upstream release. Closes: #873562.
