--- a/debs/vtun/debian/changelog
+++ b/debs/vtun/debian/changelog
@@ -1,4 +1,4 @@
-vtun (3.0.2-4+puavo1) stretch; urgency=medium
+vtun (3.0.2-4+puavo1) buster; urgency=medium
 
   * Added a patch to make vtun wait for subprocess resposible for
     running the program specified in the configuration.
