--- a/debs/wine/debian/changelog
+++ b/debs/wine/debian/changelog
@@ -1,4 +1,4 @@
-wine (2.0.2-1+puavo1+buildonce) stretch; urgency=medium
+wine (2.0.2-1+puavo1+buildonce) buster; urgency=medium
 
   * Add puavo-support-ata-id.patch.
 
