--- a/debs/wpa/debian/changelog
+++ b/debs/wpa/debian/changelog
@@ -1,4 +1,4 @@
-wpa (2:2.4-1+deb9u1+puavo1) stretch; urgency=medium
+wpa (2:2.4-1+deb9u1+puavo1) buster; urgency=medium
 
   * Add a patch to hostapd so that puavo-wlanap can support multiple
     networks.  Patch written by Petko Bordjukov <bordjukov at gmail.com>.
