--- a/debs/grub2/debian/changelog
+++ b/debs/grub2/debian/changelog
@@ -1,4 +1,4 @@
-grub2 (2.02~beta3-5+puavo1) stretch; urgency=medium
+grub2 (2.02~beta3-5+puavo1) buster; urgency=medium
 
   * Fix sparsefile support on compressed squashfs.
 
