Revert "Use "buster" everywhere on all Debian package changelogs."
This reverts commit f228433ee975bc081dcb7e49361bff2e1e34f8a7.

--- a/cloud/puavo-ds/debian/changelog
+++ b/cloud/puavo-ds/debian/changelog
@@ -1,4 +1,4 @@
-puavo-ds (0.3.2) buster; urgency=medium
+puavo-ds (0.3.2) stretch; urgency=medium
 
   * New "upstream" version, with some changes by Veli-Matti Lintu.
 
