--- a/debs/gnome-shell/debian/changelog
+++ b/debs/gnome-shell/debian/changelog
@@ -1,4 +1,4 @@
-gnome-shell (3.22.3-2+puavo1) buster; urgency=medium
+gnome-shell (3.22.3-2+puavo1) stretch; urgency=medium
 
   * Allow gnome-shell extensions in gdm mode.
 
