--- a/debs/krb5/debian/changelog
+++ b/debs/krb5/debian/changelog
@@ -1,4 +1,4 @@
-krb5 (1.17-2+puavo1) buster; urgency=medium
+krb5 (1.17-2+puavo1) unstable; urgency=medium
 
   * Added a patch to increase maximum number of realms.
 
