--- a/debs/mutter/debian/changelog
+++ b/debs/mutter/debian/changelog
@@ -1,4 +1,4 @@
-mutter (3.22.3-2+puavo1) buster; urgency=medium
+mutter (3.22.3-2+puavo1) stretch; urgency=medium
 
   * Add puavo_allow_permissions.patch to mutter, allowing
     restrictions to mutter functionality based on
