--- a/debs/nwjs/debian/changelog
+++ b/debs/nwjs/debian/changelog
@@ -1,4 +1,4 @@
-nwjs (0.14.7-0+puavo1) buster; urgency=medium
+nwjs (0.14.7-0+puavo1) stretch; urgency=medium
 
   * Try nwjs 0.14.7, maybe it works better for us.
 
