--- a/debs/openldap/debian/changelog
+++ b/debs/openldap/debian/changelog
@@ -1,4 +1,4 @@
-openldap (2.4.47+dfsg-3+puavo1+buildonce) buster; urgency=medium
+openldap (2.4.47+dfsg-3+puavo1+buildonce) unstable; urgency=medium
 
   * With some patches by Puavo Org.
 
