--- a/debs/openldap/debian/changelog
+++ b/debs/openldap/debian/changelog
@@ -1,3 +1,9 @@
+openldap (2.4.47+dfsg-3+puavo1+buildonce) unstable; urgency=medium
+
+  * With some patches by Puavo Org.
+
+ -- Puavo Org <dev@opinsys.fi>  Mon, 25 Mar 2019 12:54:06 +0200
+
 openldap (2.4.47+dfsg-3) unstable; urgency=medium
 
   * Restore patches to contrib Makefiles to set CFLAGS, CPPFLAGS, and LDFLAGS
