--- a/debs/nbd/debian/changelog
+++ b/debs/nbd/debian/changelog
@@ -1,3 +1,10 @@
+nbd (1:3.15.2-3+puavo1) unstable; urgency=medium
+
+  * Patched nbd-server for
+    https://github.com/NetworkBlockDevice/nbd/issues/96
+
+ -- Puavo Org <dev@opinsys.fi>  Wed, 03 Apr 2019 12:11:56 +0300
+
 nbd (1:3.15.2-3) unstable; urgency=medium
 
   * tests/run/certs/client-cert.pem: regenerate with a certificate
